<resources>
    <string name="app_name">Lyngua</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start_activity">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_connection">No Internet Connection</string>

    <!-- TEXT FIELDS -->
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="first_name_field">First Name</string>
    <string name="last_name_field">Last Name</string>
    <string name="interest1">Interest 1</string>
    <string name="interest2">Interest 2</string>
    <string name="interest3">Interest 3</string>

    <!-- BUTTONS -->
    <string name="next_button">Next</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="google_button">Sign in with Google</string>
    <string name="lets_go_button">Let\'s Go!</string>
    <string name="no_thanks_button">No Thanks</string>
    <string name="personal_button">Personal Details</string>
    <string name="language_button">Change Language</string>
    <string name="password_button">Change Password</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">Confirm</string>
    <string name="edit_name_button">Edit Name</string>
    <string name="delete_button">Delete</string>
    <string name="new_album_button">New Album</string>
    <string name="see_all_button">See all</string>
    <string name="select_button">Select</string>

    <!-- PAGE TITLES AND HEADERS -->
    <string name="sign_up_title">Let\'s Get Started</string>
    <string name="setup_profile_title">What Do We Call You?</string>
    <string name="choose_language_title">What Language\nDo You Want To Learn?</string>
    <string name="choose_interests_title">What Are\nYour Interests?</string>
    <string name="complete_sign_up_title">You\'re Good To Go!</string>
    <string name="welcome_greeting">Welcome</string>
    <string name="good_morning_greeting">Good Morning</string>
    <string name="good_afternoon_greeting">Good Afternoon</string>
    <string name="good_evening_greeting">Good Evening</string>
    <string name="good_night_greeting">Good Night</string>
    <string name="home_photos_header">Recent Photos</string>
    <string name="home_category_header">Get Practicing!</string>
    <string name="home_album_header">Check out your recent album</string>

    <!-- DIALOG TITLES AND TEXT -->
    <string name="create_album_title">Enter Album Name</string>
    <string name="delete_album_title">Delete Album</string>
    <string name="delete_album_text">Are you sure you want to delete album %1$s?\nAll the photos within this album will be deleted</string>
    <string name="edit_album_name_title">Enter new album name</string>
    <string name="save_to_album_title">Choose An Album</string>
    <string name="save_to_album_text">Pick which album you would like to save this photo to or create a new album</string>

    <!-- GENERAL TEXT -->
    <string name="or">OR</string>
    <string name="interests_example">Choose up to 3 interests\nEx. basketball, mathematics, nature</string>
    <string name="app_tour_prompt">Take a tour of the app\nto get started!</string>
    <string name="photos_empty">You haven\'t saved any pictures!</string>
    <string name="category_empty">You aren\'t practicing any categories!</string>
    <string name="album_empty">You haven\'t created any albums!</string>
    <string name="goal_description_words">%1$d words to complete by %2$s %3$d</string>
    <string name="goal_description_time">%1$.1f minutes left to complete by %2$s %3$d</string>
    <string name="goal_percentage">%1$d%%</string>
    <string name="goal_empty">You have no goals for this category</string>
    <string name="num_words">This is # words: %1$d</string>

    <!-- QUESTION TEXT -->
    <string name="multiple_choice">Select The Correct Translation Of The Word</string>
    <string name="word_matching">Match The Correct Translations To The Words By Dragging The Options</string>
    <string name="fill_in">Type In The Translation To The Word Below</string>
    <string name="fill_in_hint">Enter translation here.</string>
    <string name="keyboard_hint">Hint: You may need to add the keyboard layout of your language of choice through your keyboard settings.</string>

</resources>