<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PersonalDetails">

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/save_button"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_profile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/image_profile_unset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_edit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/image_edit_icon"
        app:layout_constraintBottom_toBottomOf="@id/imageView_profile"
        app:layout_constraintEnd_toEndOf="@+id/imageView_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_field" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_field" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_field" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>