<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".views.Categories.practice_words.FillInBlank">


    <TextView
        android:id="@+id/question_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fill_in"
        android:textAlignment="center"
        android:paddingTop="75dp"
        android:paddingBottom ="56dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/regular"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/question_view"
        app:layout_constraintStart_toStartOf="@+id/question_view"
        app:layout_constraintTop_toBottomOf="@+id/question_view"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp">

        <TextView
            android:id="@+id/question_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:padding="40dp"
            android:text="SAMPLE WORD"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/question_view"
            app:layout_constraintStart_toStartOf="@+id/question_view"
            app:layout_constraintTop_toBottomOf="@+id/question_view" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editText_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fill_in_hint"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <Button
        android:id="@+id/btn_evaluate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Submit Answer"
        app:layout_constraintEnd_toEndOf="@+id/editText_translation"
        app:layout_constraintStart_toStartOf="@+id/editText_translation"
        app:layout_constraintTop_toBottomOf="@+id/editText_translation" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_evaluate"
        app:layout_constraintStart_toStartOf="@id/btn_evaluate"
        app:layout_constraintEnd_toEndOf="@id/btn_evaluate">

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:padding="20dp"
            android:text="RESULT TEXT"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btn_evaluate" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/keyboard_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/keyboard_hint"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/card_view2"
        app:layout_constraintStart_toStartOf="@id/card_view2"
        app:layout_constraintEnd_toEndOf="@id/card_view2"/>



</androidx.constraintlayout.widget.ConstraintLayout>